# amazon-sns-python-extended-client-lib

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: leaked-secrets-scan.yml  pull_requests.yml  release.yml  semgrep.yml
src/sns_extended_client/: __init__.py  exceptions.py  session.py  sns_extended_client.py
test/: __init__.py  demo.py  example_test.py  sample.py  test_session.py
test_integ/: test_session.py
test_integ/fixtures/: objects.py  session.py  sns.py
