[flake8]
ignore = 
    # E501 is line length. Let Black deal with this (sometimes it can't split lines).
    E501,
    # not pep8, black adds line break before binary operator
    W503,

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
description_file = README.md
